@@ -1,3 +1,8 @@
+2007-01-07  Thomas Wood  <thos@gnome.org>
+
+	* themus-theme-applier.c: (main): Applied modified patch from bug 167063
+	(themus-theme-applier crashes while running from command promt)
+
 2006-07-23  Sebastien Bacher  <seb128@debian.org>
 
 	* theme-method.directory.in: add encoding key, 
